--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <title>React Tic Tac Toe</title>
   </head>
   <body>
+  <body style="background-color: lightblue">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
