--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <title>React Tic Tac Toe</title>
   </head>
   <body>
-  <body style="background-color: lightblue">
+  <body style="background-color: cyan">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
